[package]
name = "strobe-tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "sdl_app"
path = "src/main.rs"

[dependencies]
# sdl2 = { version="0.36.0", features = ["gfx", "image"] }
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3.66"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'console',
]
