[package]
name = "strobe-tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-console = "0.3.0"
itertools = "0.12.0"
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3.66"
features = []
